--- a/style.css
+++ b/style.css
@@ -1,66 +1,24 @@
-body {
-  margin: 5% 10%;
-  background-color: rgb(29,161,242);
+/* Hide modal initially */
+.hidden {
+  display: none;
 }
 
-.like-glyph {
-  cursor: pointer;
-}
-
-body h1 {
-  color: #FFF;
-}
-
-body > header {
-  margin-bottom: 5%;
-}
-
-article.media-post {
-  border: solid 1px #000;
-  margin: 2% 3%;
-  background-color: #fff;
-}
-
-article.media-post > p {
-  background-color: rgba(0,123,255,0.25);
-  padding: 1em 2em;
-}
-
-article.media-post > header {
-  padding: 1em 2em;
-  background-color: rgb(225,232,237);
-}
-
-article.media-post > footer {
-  color: rgb(170,184,194);
-}
-
-article.media-post > footer ul {
-  list-style-type: none;
-}
-
-#modal {
-  border-radius: 10px;
-  background-color: maroon;
-  color: white;
-
-  margin: 1em;
-  padding: 1em;
-
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-}
-
-#modal p {
-  margin-bottom: 0;
-}
-
+/* Style the activated heart */
 .activated-heart {
   color: red;
+  font-size: 2rem;
 }
 
-.hidden {
-  visibility: hidden;
+/* Modal styling */
+#modal {
+  background-color: pink;
+  color: red;
+  font-size: 20px;
+  padding: 10px;
+  position: fixed;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, 0);
+  border: 2px solid red;
+  border-radius: 5px;
 }
